tests/baselines/reference/ParameterList4.errors.txt
ParameterList4.ts(1,12): error TS2369: A parameter property is only allowed in a constructor implementation.
ParameterList4.ts(1,12): error TS7006: Parameter 'A' implicitly has an 'any' type.


==== ParameterList4.ts (2 errors) ====
    function F(public A) {
               ~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
               ~~~~~~~~
!!! error TS7006: Parameter 'A' implicitly has an 'any' type.
    }